kubernetes/apps/kagent/base/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kagent
spec:
  hostnames:
    - kagent.dcaspi.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-internal
      namespace: networking
  rules:
    - backendRefs:
        - name: kagent-ui
          port: 8080
